# masamlp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  gpu_speed.py  model_zoo.py  openxla_repro.py  parity_realmlp.py  profile_step.py  tpu_speed.py  xla_step_fusion_prototype.py
docs/: attribution.md  design.md  devices.md  glossary.md  known_issues.md  lnn.md  parameters.md  roadmap.md  s6e7-field-report.md
docs/adr/: 0001-parameter-reference.md  0002-tpu-xla-support.md  0003-xla-execution-strategy.md  0004-tpu-multi-device.md  0005-tabm-inner-ensemble-contract.md
docs/research/: tpu-xla.md
docs/verdicts/: 2026-07-02-gpu-report.md  2026-07-03-gpu-report.md  2026-07-03-multi-gpu-retrieval-speed.md  2026-07-10-tpu-report.md  2026-07-12-tpu-report.md
examples/: quickstart.py
examples/kaggle/: ft-transformer-multi-gpu-ensemble.ipynb  modernnca-multi-gpu-ensemble.ipynb  tab-transformer-multi-gpu-ensemble.ipynb  tabr-multi-gpu-ensemble.ipynb
scripts/: check.sh  colab_gpu_check.ipynb  colab_gpu_check.py  colab_gpu_check.sh  colab_gpu_launch.py
src/masamlp/: __init__.py  classifier.py  presets.py  regressor.py  sklearn.py
src/masamlp/core/: __init__.py  device.py  ensemble.py  metrics.py  objectives.py  parallel.py  serialization.py  (+1 more)
tests/: conftest.py  test_candidate_budget.py  test_custom_metric.py  test_custom_objective.py  test_danet_stability.py  test_device.py  test_docs_parameters.py  test_embeddings.py  test_ensemble.py  test_estimators.py  test_ftt_inner_k.py  test_gandalf_grn.py  test_ghost_batchnorm.py  test_metrics.py  test_models.py  test_modernnca.py  test_objectives.py  test_parallel.py  test_predict_members.py  test_preprocessing.py  test_realmlp.py  test_retrieval_cache.py  test_sample_weight.py  test_serialization.py  test_sklearn_compat.py  test_tabm.py  test_tabr.py  test_trainer.py  test_transformers.py  test_xla.py
(+21 files in other folders)
